yurichikiserver/yurichikierver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yurichikiserver-service
  namespace: yurichikiserver
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
