yurichikiserver/yurichikiserver-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: yurichikiserver
spec:
  parentRefs:
    - name: gateway
      namespace: istio-gateway
      sectionName: home
  hostnames: ["yurichikiserver.home"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yurichikiserver-service
          port: 80
